Bug 500394 - Using the textual list in the icons only task manager logs an error to the journal kf.windowsystem KWindowInfo is only functional when running on X11
Summary: Using the textual list in the icons only task manager logs an error to the jo...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 6.3.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2025-02-19 11:28 UTC by hbr
Modified: 2025-03-07 16:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Icons only task manager settings 01 (57.78 KB, image/png)
2025-02-19 11:28 UTC, hbr
Details
Icons only task manager settings 02 (70.75 KB, image/png)
2025-02-19 11:28 UTC, hbr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hbr 2025-02-19 11:28:46 UTC
Created attachment 178581 [details]
Icons only task manager settings 01

SUMMARY

Using the textual list in the icons only task manager logs the following error message to the journal:

19.02.25 12:19	plasmashell	kf.windowsystem: KWindowInfo is only functional when running on X11

STEPS TO REPRODUCE

1. Set up the icons only task manager to use "Shows textual list" for "Clicking grouped tasks"
2. Start 2 Instances of Firefox and open some tabs in both (start one instance normally and the second from cmd line with firefox -new-instance -no-remote)
3. Now click on the Firefox icon in the task manager and switch between the instances and tabs from the list
4. Check the journal

OBSERVED RESULT
The above error message appears in the journal multiple times.

EXPECTED RESULT
No error happens / error message gets logged.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 6.3.1
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7800X3D 8-Core Processor
Memory: 30,9 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 XTX
Manufacturer: ASRock
Product Name: X670E Steel Legend
Comment 1 hbr 2025-02-19 11:28:58 UTC
Created attachment 178582 [details]
Icons only task manager settings 02
Comment 2 TraceyC 2025-02-24 17:58:49 UTC
Adding the x11-only keyword
Comment 3 cwo 2025-02-24 20:31:31 UTC
This is wayland-only; as KWindowInfo works on X11, no warning is printed there.
Comment 4 Bug Janitor Service 2025-03-04 15:22:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1281
Comment 5 cwo 2025-03-07 14:01:00 UTC
Git commit a8e4cba850f695db68d7cc18bfe3ef8b4d2f5993 by Christoph Wolk.
Committed on 04/03/2025 at 15:54.
Pushed by cwo into branch 'master'.

plasmaquick: don't use KWinInfo in Wayland dialogs

PlasmaCore.Dialog tests whether the dialog is spawning in a window
ignoring the task manager or in a window with type NET::Dock. The second
check requires KWinInfo, which is not available in Wayland, causing an
error message to be printed whenever a PlasmaCore.Dialog is opened,
such as in the task manager's GroupDialog.

Instead, only perform this test if we are in X11, avoiding the error
message.

M  +8    -4    src/plasmaquick/dialog.cpp

https://invent.kde.org/plasma/libplasma/-/commit/a8e4cba850f695db68d7cc18bfe3ef8b4d2f5993
Comment 6 cwo 2025-03-07 16:49:04 UTC
Git commit 677037ab339e5a048cf2f25fc5ccb0cc8ee17d95 by Christoph Wolk.
Committed on 07/03/2025 at 16:41.
Pushed by cwo into branch 'Plasma/6.3'.

plasmaquick: don't use KWinInfo in Wayland dialogs

PlasmaCore.Dialog tests whether the dialog is spawning in a window
ignoring the task manager or in a window with type NET::Dock. The second
check requires KWinInfo, which is not available in Wayland, causing an
error message to be printed whenever a PlasmaCore.Dialog is opened,
such as in the task manager's GroupDialog.

Instead, only perform this test if we are in X11, avoiding the error
message.


(cherry picked from commit a8e4cba850f695db68d7cc18bfe3ef8b4d2f5993)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>

M  +8    -4    src/plasmaquick/dialog.cpp

https://invent.kde.org/plasma/libplasma/-/commit/677037ab339e5a048cf2f25fc5ccb0cc8ee17d95